# -cognitive-phase-space-

./: .gitignore  README.md  demo_kimi_api.py  output.txt  pyproject.toml  test_output.txt
.monkeycode/: MEMORY.md
.monkeycode/specs/comprehensive-dictionary-engine/: design.md  requirements.md  tasklist.md
docker/: Dockerfile  docker-compose.yml
docs/: CEE-GOV-008.md  api.md  architecture.md  data_strategy.md  development.md  user_guide.md
docs/music-studio/: animations.js  app.js  browserSynth.js  components.js  index.html  keyboardShortcuts.js  shaders.js  style.css  synth.worker.js  themeManager.js
fusion_engine/: __init__.py
fusion_engine/api/: adapters.py  router.py  streaming.py
fusion_engine/benchmarks/: benchmark_results.json  fusion_benchmark.py
fusion_engine/core/: fusion_engine.py  model_collector.py  quality_assessor.py
fusion_engine/data/: __init__.py  batch_generator.py  bootstrap_dataset.py  data_validator.py  prompt_library.py  synthetic_generator.py
fusion_engine/fusion/: __init__.py  best_of_n.py  evolutionary_fusion.py  judge_fusion.py  majority_vote.py
fusion_engine/knowledge/: model_knowledge_base.json
fusion_engine/moe/: README.md  architecture.py  training.py  weight_merging.py
fusion_engine/video_fusion/: __init__.py  demo.py  experts.py  phase_space_fusion.py  quality_t6.py  trajectory.py  water_logic.py
middle-end/: package-lock.json  package.json  tsconfig.json
middle-end/src/: index.ts
middle-end/src/Galois/: FieldExtension.ts  GaloisGroup.ts  NormalExtension.ts  RadicalSolvability.ts  SplittingField.ts
middle-end/src/abyss/: AbyssGaze.ts  AbyssalPressure.ts  BottomlessRecursion.ts  DepthSound.ts  VoidResponse.ts
middle-end/src/adaptation/: AutotomicTail.ts  BaldwinAccelerator.ts  CrypsisModule.ts  EpigeneticSwitch.ts  MimicryEngine.ts  MorphogenGradient.ts  PhenotypicPlasticity.ts
middle-end/src/aesthetics/: AestheticDistance.ts  AestheticJudgment.ts  ArtisticGenius.ts  BeautifulForm.ts  SublimeHorizon.ts  TasteHarmonics.ts  TragicCatharsis.ts
middle-end/src/aesthetics_extended/: BeautyFunction.ts  StyleMorphism.ts  SublimeEngine.ts  UncannyValley.ts
middle-end/src/affine_geometry/: AffineInvariant.ts  AffineSpace.ts  ParallelogramLaw.ts  ShearDeformation.ts
middle-end/src/agents_registry/: AgentCatalog.ts  AgentComposer.ts  AgentEvolution.ts
middle-end/src/ai_ethics/: AlignmentEngine.ts  ExplainabilityEngine.ts  FairnessChecker.ts  GovernanceFramework.ts  PrivacyPreserver.ts  SafetyMonitor.ts
middle-end/src/alchemy/: MagnumOpus.ts  PhilosopherStone.ts  PrimaMateria.ts
middle-end/src/ambiguity/: AmbiguityAmplifier.ts  DoubtInjector.ts  EquivocationEngine.ts  MultistablePercept.ts  SemanticFog.ts
middle-end/src/ancestor/: AncestralCodebase.ts  AtavismTrigger.ts  GeneticMemory.ts  LineageTrail.ts  ProgenitorWorship.ts
middle-end/src/aporia/: AporiaEngine.ts
middle-end/src/ar_vr/: ARFilter.ts  AugmentedReality.ts  MixedReality.ts  SpatialComputing.ts  ThreeDEngine.ts  VRInteraction.ts  VirtualReality.ts
middle-end/src/archaeology/: ArchaeologicalDating.ts  CulturalArtifact.ts  FossilAnalyzer.ts  StratigraphicExcavator.ts
middle-end/src/architecture/: AcousticDesign.ts  BuildingMaterials.ts  FengShui.ts  HVACDesign.ts  LightingDesign.ts  SpaceDesign.ts  StructuralMechanics.ts  UrbanPlanning.ts
middle-end/src/arithmetic/: BSDConjecture.ts  EllipticCurve.ts  GaloisRepresentation.ts  LFunction.ts  ModularForm.ts
middle-end/src/ark/: AraratLanding.ts  CovenantRainbow.ts  FloodGauge.ts  SpeciesPair.ts  SurvivorCore.ts
middle-end/src/astronomy/: Calendar.ts  CelestialMechanics.ts  Constellation.ts  Cosmology.ts  StellarEvolution.ts
middle-end/src/attractor/: AttractorLandscape.ts  LimitCyclePath.ts  PointAttractorLock.ts  StrangeAttractor.ts  TorusAttractor.ts
middle-end/src/automation/: MonitoringAutomation.ts  ProcessAutomation.ts  RPAEngine.ts  SchedulerEngine.ts  ScriptingEngine.ts  TaskAutomation.ts  WorkflowEngine.ts
middle-end/src/bifurcation/: CrisisEvent.ts  ForkInReality.ts  HopfCycleBirth.ts  PeriodDoubling.ts  PitchforkDecision.ts
middle-end/src/big_data/: DataGovernance.ts  DataLake.ts  DataPipeline.ts  HadoopEcosystem.ts  NoSQLDatabase.ts  SparkProcessing.ts  StreamProcessing.ts
middle-end/src/biology/: Anatomy.ts  Biochemistry.ts  CellBiology.ts  Ecology.ts  Evolution.ts  Genetics.ts  MolecularBiology.ts  Neuroscience.ts
middle-end/src/blockchain/: ConsensusMechanism.ts  DeFiProtocol.ts  LightningNetwork.ts  MerkleTree.ts  SmartContract.ts  Tokenomics.ts
middle-end/src/boundary/: BorderPatrol.ts  BoundaryCondition.ts  DissolvingBoundary.ts  EdgeOfChaos.ts  SemiPermeableWall.ts
middle-end/src/calculus/: DifferentialCalculus.ts  DifferentialEquations.ts  IntegralCalculus.ts  MultivariableCalculus.ts  SeriesCalculus.ts
middle-end/src/cartography/: AtlasCompiler.ts  CognitiveMapper.ts  ProjectionEngine.ts  TerrainGenerator.ts
middle-end/src/catastrophe/: ButterflyEffect.ts  CatastropheRecovery.ts  CuspCatastrophe.ts  FoldCollapse.ts  (+1 more)
scripts/: cognitive_alarm.py  generate_dataset.py  import_models_to_learning.py  setup_learning_cycle.py  start.sh  start_learning.py
src/cee/: __init__.py
tests/: test_adversarial.py  test_all.py  test_api_middleware.py  test_api_router.py  test_cli.py  test_context_memory.py  test_continual_learner.py  test_core_cache.py  test_core_config.py  test_core_database.py  test_core_rate_limit.py  test_cot_reasoner.py  test_engine_bias.py  test_engine_code_interpreter.py  test_engine_contradiction.py  test_engine_creative.py  test_engine_files.py  test_engine_memory.py  test_engine_multimodal.py  test_engine_rag.py  test_engine_reasoning.py  test_engine_search.py  test_engine_sentiment.py  test_engine_summarizer.py  test_engine_think.py  test_engine_topic_model.py  test_engine_translator.py  test_integration.py  test_knowledge_base.py  test_local_llm.py  test_models_schemas.py  test_monitor.py  test_planner.py  test_plugins.py  test_rag_pipeline.py  test_reflect.py  test_tool_use.py  test_utils_text.py  test_utils_web.py  test_v2_1_systems.py  (+3 more)
(+1367 files in other folders)
