[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-emergence-engine"
version = "4.3.0"
description = "Cognitive Emergence Engine (CEE) v4.3 — 认知涌现引擎：九项认知几何引擎(T1-T9) + 中端十五层架构(认知管线/推理引擎/知识图谱/多模型/安全守卫/伦理框架/事件总线/流式/反馈/缓存/委派/配置/管线/工具注册/对话记忆 + 七层原架构)"
authors = [
    {name = "Qingluan Studio & AI Collaborators"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "networkx>=3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "black>=23.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]
all = [
    "cognitive-emergence-engine[dev]",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.scripts]
cee-serve = "cee.api.server:main"
cee-chat = "cee.app.chat_backend:main"
cee-evaluate = "cee.core.cli:evaluate"
cee-benchmark = "cee.core.cli:benchmark"
cee-adversarial = "cee.core.cli:adversarial"
cee-agent = "cee.core.cli:agent"
cee-plugin = "cee.core.cli:plugin"
cee-process = "cee.core.cli:process"
cee-learn = "cee.core.cli:learn"
cee-cloud = "cee.core.cli:cloud"
cee-perf = "cee.core.cli:perf"
cee-multimodal = "cee.core.cli:multimodal"
cee-models = "cee.core.cli:models"
cee-knowledge = "cee.core.cli:knowledge"
cee-output = "cee.core.cli:output"
cee-memory = "cee.core.cli:memory_cli"
cee-sandbox = "cee.core.cli:sandbox_cli"
cee-trace = "cee.core.cli:trace_cli"
cee-approve = "cee.core.cli:approve_cli"
cee-explore = "cee.core.cli:explore_cli"
cee-route = "cee.core.cli:route_cli"
cee-market = "cee.core.cli:market_cli"
cee-mortem = "cee.core.cli:mortem_cli"
cee-debate = "cee.core.cli:debate_cli"
cee-shadow = "cee.core.cli:shadow_cli"
cee-mobile = "cee.app.mobile_server:main"
cee-resonance = "cee.core.cli:resonance_cli"
cee-entanglement = "cee.core.cli:entanglement_cli"
cee-emergence = "cee.core.cli:emergence_cli"
cee-vectorstore = "cee.core.cli:vectorstore_cli"
cee-workflow = "cee.core.cli:workflow_cli"
cee-ethics = "cee.core.cli:ethics_cli"
cee-factcheck = "cee.core.cli:factcheck_cli"
cee-curriculum = "cee.core.cli:curriculum_cli"
cee-analogy = "cee.core.cli:analogy_cli"
cee-explain = "cee.core.cli:explain_cli"
cee-middle-end = "cee.core.cli:middle_end_cli"
cee-alarm = "cee.core.cli:alarm_cli"
cee-hands = "cee.core.cli:hands_cli"
cee-profile = "cee.core.cli:profile_cli"
cee-triangle = "cee.core.cli:triangle_cli"
cee-water = "cee.core.cli:water_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
